Fix consistency issue in ports choice

--- a/Proxy/appsettings.Development.json
+++ b/Proxy/appsettings.Development.json
@@ -7,6 +7,22 @@
     }
   },
   "ReverseProxy": {
+    "Clusters": {
+      "Client": {
+        "Destinations": {
+          "Client1": {
+            "Address": "https://localhost:5001"
+          }
+        }
+      },
+      "Server": {
+        "Destinations": {
+          "Server1": {
+            "Address": "https://localhost:5005"
+          }
+        }
+      }
+    },
     "Routes": [
       {
         "RouteId": "ServerRoute",
@@ -34,22 +50,6 @@
           "Path": "{**catch-all}"
         }
       }
-    ],
-    "Clusters": {
-      "Client": {
-        "Destinations": {
-          "Client": {
-            "Address": "https://localhost:5001"
-          }
-        }
-      },
-      "Server": {
-        "Destinations": {
-          "Server": {
-            "Address": "https://localhost:5003"
-          }
-        }
-      }
-    }
+    ]
   }
 }
