update YARP to 1.0.0
- updated YARP configuration
- updated to .NET 6
- changed server-destination port to 5003
- updated packages
- added port 5005 for Tye proxy entry

--- a/Proxy/appsettings.Development.json
+++ b/Proxy/appsettings.Development.json
@@ -18,38 +18,30 @@
       "Server": {
         "Destinations": {
           "Server1": {
-            "Address": "https://localhost:5005"
+            "Address": "https://localhost:5003"
           }
         }
       }
     },
-    "Routes": [
-      {
-        "RouteId": "ServerRoute",
+    "Routes": {
+      "ServerRoute": {
         "ClusterId": "Server",
         "Match": {
           "Path": "/api/{**catch-all}"
-        },
-        "Transforms": [
-          {
-            "PathRemovePrefix": "/api"
-          }
-        ]
+        }
       },
-      {
-        "RouteId": "ServerSwaggerRoute",
+      "ServerSwaggerRoute": {
         "ClusterId": "Server",
         "Match": {
           "Path": "/swagger/{**catch-all}"
         }
       },
-      {
-        "RouteId": "ClientRoute",
+      "ClientRoute": {
         "ClusterId": "Client",
         "Match": {
           "Path": "{**catch-all}"
         }
       }
-    ]
+    }
   }
 }
