--- a/tye.yaml
+++ b/tye.yaml
@@ -8,7 +8,10 @@ services:
 - name: server
   project: Server/Server.csproj
   bindings:
-  - port: 5005
+  - port: 5003
     protocol: https
 - name: proxy
   project: Proxy/Proxy.csproj
+  bindings:
+  - port: 5005
+    protocol: https
