Update tutorial for .NET 6 and Yarp 1.0

--- a/Proxy/appsettings.Development.json
+++ b/Proxy/appsettings.Development.json
@@ -2,44 +2,48 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "ReverseProxy": {
-    "Clusters": {
-      "Client": {
-        "Destinations": {
-          "Client1": {
-            "Address": "https://localhost:5001"
-          }
-        }
-      },
-      "Server": {
-        "Destinations": {
-          "Server1": {
-            "Address": "https://localhost:5003"
-          }
-        }
-      }
+      "Microsoft.AspNetCore": "Warning"
     },
-    "Routes": {
-      "ServerRoute": {
-        "ClusterId": "Server",
-        "Match": {
-          "Path": "/api/{**catch-all}"
+    "ReverseProxy": {
+      "Clusters": {
+        "Client": {
+          "Destinations": {
+            "Client1": {
+              "Address": "https://localhost:5000"
+            }
+          }
+        },
+        "Server": {
+          "Destinations": {
+            "Server1": {
+              "Address": "https://localhost:5001"
+            }
+          }
         }
       },
-      "ServerSwaggerRoute": {
-        "ClusterId": "Server",
-        "Match": {
-          "Path": "/swagger/{**catch-all}"
-        }
-      },
-      "ClientRoute": {
-        "ClusterId": "Client",
-        "Match": {
-          "Path": "{**catch-all}"
+      "Routes": {
+        "ServerRoute": {
+          "ClusterId": "Server",
+          "Match": {
+            "Path": "/api/{**catch-all}"
+          },
+          "Transforms": [
+            {
+              "PathRemovePrefix": "/api"
+            }
+          ]
+        },
+        "ServerSwaggerRoute": {
+          "ClusterId": "Server",
+          "Match": {
+            "Path": "/swagger/{**catch-all}"
+          }
+        },
+        "ClientRoute": {
+          "ClusterId": "Client",
+          "Match": {
+            "Path": "{**catch-all}"
+          }
         }
       }
     }
